--- a/FansWebT/FansWebT.csproj
+++ b/FansWebT/FansWebT.csproj
@@ -18,6 +18,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="BlazorTypewriter" Version="1.1.0" />
     <PackageReference Include="MudBlazor" Version="7.*" />
   </ItemGroup>
 </Project>
