--- a/FansWebT/FansWebT.csproj
+++ b/FansWebT/FansWebT.csproj
@@ -21,4 +21,9 @@
     <PackageReference Include="BlazorTypewriter" Version="1.1.0" />
     <PackageReference Include="MudBlazor" Version="7.*" />
   </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
 </Project>
